# geo-disease-expression-explorer

./: .gitignore  README.md  main.py  pyproject.toml
app/: README.md
app/config/: curated_studies.json
app/data_pipeline/bronze/: __init__.py  study_snapshot.py
app/data_pipeline/jobs/: __init__.py  run_bronze_ingestion.py  run_full_refresh.py  run_gold_publication.py  run_silver_harmonization.py
app/data_pipeline/orchestration/: __init__.py  manifest.py  storage_paths.py
app/data_pipeline/silver/: __init__.py  study_record.py
app/domain/contracts/: __init__.py  export_contract.py  gold_artifacts.py
app/domain/enums/: __init__.py  contract_enums.py
app/tests/contracts/: test_export_contract.py  test_gold_contracts.py
app/tests/integration/: test_bronze_ingestion_job.py  test_full_refresh_job.py  test_gold_publication_job.py  test_silver_harmonization_job.py
app/tests/unit/: test_curated_studies_config.py  test_dashboard_filters.py  test_dashboard_interactions.py  test_dashboard_overview.py  test_deg_export.py  test_deg_table.py  test_gold_loader.py  test_heatmap_view.py  test_pipeline_manifest.py  test_project_imports.py  test_ui_entrypoint.py  test_volcano_plot.py
app/ui/: app.py
app/ui/data_access/: __init__.py  gold_loader.py
app/ui/exports/: __init__.py  deg_csv.py
app/ui/state/: __init__.py  dashboard_filters.py
app/ui/views/: __init__.py  dashboard_interactions.py  dashboard_overview.py  deg_table.py  heatmap_view.py  volcano_plot.py
