[project]
name = "long-covid-expression-explorer"
version = "0.1.0"
description = "Study-aware Long COVID GEO expression explorer built with a Bronze/Silver/Gold data pipeline and Streamlit UI."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "streamlit>=1.57.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
